@@ -1,5 +1,5 @@
 /*
- *   $Id: device-bsd44.c,v 1.15 2005/10/18 19:17:29 lutchann Exp $
+ *   $Id: device-bsd44.c,v 1.16 2005/10/28 09:25:38 psavola Exp $
  *
  *   Authors:
  *    Craig Metz		<cmetz@inner.net>
@@ -30,6 +30,7 @@ int
 setup_deviceinfo(int sock, struct Interface *iface)
 {
 	struct ifconf ifconf;
+	struct ifreq ifr;
 	int nlen;
 	uint8_t *p, *end;
 	struct AdvPrefix *prefix;
@@ -47,6 +48,16 @@ setup_deviceinfo(int sock, struct Interface *iface)
 		flog(LOG_ERR, "ioctl(SIOCGIFCONF) failed: %s(%d)", strerror(errno), errno);
 		goto ret;
 	}
+
+ 	memset(&ifr, 0, sizeof(ifr));
+	strncpy(ifr.ifr_name, iface->Name, IFNAMSIZ-1);
+	ifr.ifr_name[IFNAMSIZ-1] = '\0';
+
+	if (ioctl(sock, SIOCGIFMTU, &ifr) < 0)
+		flog(LOG_WARNING, "ioctl(SIOCGIFMTU) failed for %s: %s", iface->Name, strerror(errno));
+
+	if (ifr.ifr_mtu)
+		dlog(LOG_DEBUG, 3, "mtu for %s is %d", iface->Name, ifr.ifr_mtu);
 
 	p = (uint8_t *)ifconf.ifc_buf;
 	end = p + ifconf.ifc_len;
@@ -82,11 +93,11 @@ setup_deviceinfo(int sock, struct Interface *iface)
             		case IFT_ETHER:
             		case IFT_ISO88023:
             			iface->if_prefix_len = 64;
-              			iface->if_maxmtu = 1500;
+              			iface->if_maxmtu = (ifr.ifr_mtu) ? ifr.ifr_mtu : 1500;
               			break;
             		case IFT_FDDI:
             			iface->if_prefix_len = 64;
-              			iface->if_maxmtu = 4352;
+              			iface->if_maxmtu = (ifr.ifr_mtu) ? ifr.ifr_mtu : 4352;
               			break;
             		default:
             			iface->if_prefix_len = -1;
